IngressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: openshift-default
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: openshift.io/ingress-to-route
